Address 0.4.0 plan review findings H-R1 through L14
Closes nine review findings from the second plan review pass:

- H-R1: add terminal FAILED state to the M1 session state machine so
  commitChunk()/rollbackChunk() throws have a defined contract; importer
  treats the table as burned and calls close() immediately.
- H-R2: rename kahnSort references to AbstractDdlGenerator.topologicalSort,
  require explicit cycle check (circularEdges.isNotEmpty -> Exit 3), and
  note the protected->public visibility lift needed in Phase E.
- H-R3: session-local FK switches (SET FOREIGN_KEY_CHECKS, PRAGMA
  foreign_keys) are reset in R6 cleanup step 4 on the same connection
  before pool.release, to prevent a HikariCP pool-leak across
  sequential imports; Phase C pool-size-1 regression test added.
- M-R4: pin PK column ordering to KEY_SEQ for Composite-PK UPSERT.
- M-R5: reject literal '?' in raw WhereClause when combined with a
  ParameterizedClause (Exit 2, CLI pre-flight).
- M-R6: spell out the AbstractJdbcDataReader refactor scope in Phase A
  step 5 (WhereFragment type, collectWhereClauses return-type change,
  setObject bind loop).
- M-R7: FailedFinishInfo carries causeMessage/causeClass/causeStack
  (plus closeCause* pendants) instead of a single String, so Phase F
  can assert the exception type structurally.
- M-R8: extend rowsUnknown fallback to the INSERT IGNORE / --on-conflict
  skip path with a path-specific hint line.
- M-R9: headered CSV row with mismatched field count is a format error
  routed through --on-error.

Polish (L9-L14, renumbered to avoid collision with existing L1-L8):

- L9:  move gradle.properties/build.gradle.kts out of section 3 into a
  new 5.1 subsection.
- L10: require the NamedConnectionResolver KDoc update in the same
  Phase E step that implements resolveSource/resolveTarget.
- L11: require CPU/heap/JDK/GC/OS metadata in the Phase-D perf doc so
  the R5 gate stays reproducible.
- L12: rowsUnknown only appears in the plain-text headline when > 